# TypeAhead

./: .gitignore  Objective.md  Project Report.md  README.md  docker-compose.yml
Backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 9c6605d06187_initial_schema.py
Backend/src/: __init__.py  config.py  main.py
Backend/src/cache/: cache_manager.py  consistent_hash.py  redis_nodes.py
Backend/src/db/: __init__.py  batch_writer.py  connection.py  models.py  seed.py
Backend/src/middleware/: __init__.py  request_logger.py
Backend/src/routers/: __init__.py  cache_debug.py  metrics.py  search.py  suggest.py
Backend/src/schemas/: models.py
Backend/src/services/: search_service.py  suggestion_service.py  trending_service.py
Backend/src/utils/: __init__.py  logger.py
Frontend/: Dockerfile  package-lock.json
Frontend/src/: App.tsx  index.css
